:sparkles: Add ping
