# docs/openapi.yml
@@ -95,6 +95,20 @@ paths:
         }
       parameters:
         - $ref: '#/components/parameters/userIdInQuery'
+  /ping:
+    get:
+      summary: ping
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+      operationId: ping
+      description: 疎通確認
+      tags:
+        - ping
 components:
   schemas:
     Room:
@@ -675,3 +689,5 @@ tags:
     description: ルームAPI
   - name: ws
     description: WebsocketAPI
+  - name: ping
+    description: 疎通確認API
